Fix: Fixed extra white spacing between section and footer

--- a/Style/style.css
+++ b/Style/style.css
@@ -392,8 +392,8 @@ h2 {
 .product {
     margin-top: 0;
     margin-bottom: 0;
-    margin: 25px 0;
-    /* padding-bottom: 25px; */
+    /* margin: 25px 0;
+    padding: 25px 0; */
     background-color: var(--background-color);
     padding-right: 15px;
     padding-left: 15px;
@@ -406,6 +406,8 @@ h2 {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    padding: 20px 0;
+    
 }
 
 .product__container .product__info {
